@@ -1,5 +1,11 @@
 2006-09-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* datrie/alpha-map.c (alpha_map_char_to_alphabet,
+	alpha_map_alphabet_to_char): Made sure terminator is always mapped
+	with character 0.
+
+2006-09-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* datrie/darray.{h,c} (da_is_walkable),
 	datrie/tail.{h,c} (tail_is_walkable_char): Made the tiny functions
 	inline (i.e. macros), for tiny performance gain.
